[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

#OPTIONAL

# [project]
# name = "my_package"
# version = "0.0.1" (can be excluded when using dynamic version)
# authors = [
#     {name = "Josiah Carberry", email = "josiah_carberry@brown.edu"},
# ]
# description = "My package description"
# readme = "README.rst"
# requires-python = ">=3.7"
# keywords = ["one", "two"]
# license = {text = "BSD-3-Clause"}
# license = { file = "LICENSE" }
# classifiers = [
#     "Framework :: Django",
#     "Programming Language :: Python :: 3",
# ]
# dependencies = [
#     "requests",
#     'importlib-metadata; python_version<"3.8"',
# ]
# dynamic = ["version"]

# [tool.setuptools.dynamic]
# version = {attr = "py_pkg_test.__version__"}

# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

# [project.scripts]
# my-script = "my_package.module:function"
