[metadata]
name = example
# version = 0.1.0
version = attr: py_pkg_test.__version__
description = Some random package
long_description = file: README.md
long_description_content_type = text/markdown
author = Thiago Ghidoni
author_email = thiagoghidoni@gmail.com
license = MIT
license_file = LICENSE

[options]
packages = find:

# OPTIONAL - use in case of different files needed inside package
# zip_safe = True
# include_package_data = True

install_requires =
    pandas == 1.4.1
    PyYAML >= 6.0
    typer



# OPTIONAL - use in case of /src structure 
# package_dir=
#     =src

# [options.packages.find]
# where=src

[options.entry_points]
console_scripts = 
    func1_cli = py_pkg_test.module:func1

[options.package_data]
example = data/schema.json, *.txt
* = README.md